# ticcxx_cmake

./: .gitignore  CMakeLists.txt  README.md  build.sh  code-format.sh
CMake/: GNU-ARM-Toolchain.cmake
CMake/Modules/: FindOpenocd.cmake  FindSimpleLinkCC13X0SDK.cmake  FindXdctools.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: CC1310_LAUNCHXL.c  main_tirtos.c
src/core/: startup.c
tools/: CC1310_LAUNCHXL_TIRTOS.lds  format.sh
